--- a/DataHappy/Pages/Index.cshtml
+++ b/DataHappy/Pages/Index.cshtml
@@ -4,7 +4,66 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome Happy</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <div class="jumbotron">
+        <h1 class="display-4">Bassem Jallouli</h1>
+        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <hr class="my-4">
+        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <p class="lead">
+            <a class="btn btn-primary btn-lg" asp-page="/Resume" role="button">Resume</a>
+        </p>
+    </div>
+
+    <div class="card-deck">
+        <div class="card">
+            <img class="card-img-top" src="~/Images/A1.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Data Analyst</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-img-top" src="~/Images/A2.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Web Developper</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+        </div>
+        <div class="card">
+            <img class="card-img-top" src="~/Images/A3.jpg" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Quality Engineer</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="card-deck">
+        <div class="card">
+            <div class="talk-media-holder embed-responsive embed-responsive-16by9 mr-md-3">
+                <iframe width="560" height="315" src="~/Images/A1.jpg"></iframe>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Positive Thinking</h5>
+                <p class="card-text">Thoughts are powerful. It can affect your moods, your decisions, your physiology and your life itself.</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="talk-media-holder embed-responsive embed-responsive-16by9 mr-md-3">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/hHIikHJV9fI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Team Work</h5>
+                <p class="card-text">Several years ago, Google launched a big study to figure out what makes teams successful.</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="talk-media-holder embed-responsive embed-responsive-16by9 mr-md-3">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/s0dMTAQM4cw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Artificial Intelligence</h5>
+                <p class="card-text">Developments in artificial intelligence (AI) are leading to fundamental changes in the way we live.</p>
+            </div>
+        </div>
+    </div>
