--- a/DataHappy/Pages/Shared/_Layout.cshtml
+++ b/DataHappy/Pages/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color: rgba(50, 115, 220, 0.3); border-bottom-right-radius: 70%;">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">Happy Data</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -22,13 +22,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Experience</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Resume">Resume</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Conferences/Index">Conference</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Conferences/Index">Full Stack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Review">Review</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Review">Machine Learning</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Interests">Interests</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Contact</a>
