Add conferences in Full Stack page

--- a/DataHappy/Pages/Index.cshtml
+++ b/DataHappy/Pages/Index.cshtml
@@ -10,8 +10,10 @@
         <hr class="my-4">
         <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
         <p class="lead">
-            <a class="btn btn-primary btn-lg" asp-page="/Resume" role="button">Resume</a>
+            <a class="btn btn-primary btn-lg" asp-page="/Conferences/Index" role="button">Full Stack</a>
+            <a class="btn btn-primary btn-lg" asp-page="/Review" role="button">Machine Learning</a>
         </p>
+        <a href="https://www.linkedin.com/in/bassem-jallouli-6869031b/" class="fa fa-linkedin-in"></a>
     </div>
 
     <div class="card-deck">
