Add Linkedin and Github links to Home page

--- a/DataHappy/Pages/Index.cshtml
+++ b/DataHappy/Pages/Index.cshtml
@@ -10,10 +10,15 @@
         <hr class="my-4">
         <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
         <p class="lead">
-            <a class="btn btn-primary btn-lg" asp-page="/Conferences/Index" role="button">Full Stack</a>
-            <a class="btn btn-primary btn-lg" asp-page="/Review" role="button">Machine Learning</a>
+            <a class="btn btn btn-outline-info btn-lg" asp-page="/Conferences/Index" role="button">Full Stack</a>
+            <a class="btn btn btn-outline-info btn-lg" asp-page="/Review" role="button">Machine Learning</a>
+            <div class="mx-auto" style="width: 200px;">
+                <a href="https://www.linkedin.com/in/bassem-jallouli-6869031b/" class="fa fa-linkedin-in">Linkedin</a>
+                <a href="https://github.com/Bassempro1" class="fa fa-linkedin-in">Github</a>
+            </div>
+            
         </p>
-        <a href="https://www.linkedin.com/in/bassem-jallouli-6869031b/" class="fa fa-linkedin-in"></a>
+        
     </div>
 
     <div class="card-deck">
