--- a/DataHappy/Pages/Shared/_Layout.cshtml
+++ b/DataHappy/Pages/Shared/_Layout.cshtml
@@ -19,22 +19,22 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Conferences/Index">Full Stack</a>
+                            <a class="nav-link" asp-area="" asp-page="/Conferences/Index">Full Stack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Review">Machine Learning</a>
+                            <a class="nav-link" asp-area="" asp-page="/Review">Machine Learning</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Resume">Resume</a>
+                            <a class="nav-link" href="https://www.linkedin.com/in/bassem-jallouli-6869031b/">Resume</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Interests">Interests</a>
+                            <a class="nav-link" asp-area="" asp-page="/Interests">Interests</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Contact</a>
+                            <a class="nav-link" asp-area="" asp-page="/Privacy">Contact</a>
                         </li>
                     </ul>
                 </div>
