--- a/DataHappy/Pages/Index.cshtml
+++ b/DataHappy/Pages/Index.cshtml
@@ -10,15 +10,10 @@
         <hr class="my-4">
         <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
         <p class="lead">
-            <a class="btn btn btn-outline-info btn-lg" asp-page="/Conferences/Index" role="button">Full Stack</a>
-            <a class="btn btn btn-outline-info btn-lg" asp-page="/Review" role="button">Machine Learning</a>
-            <div class="mx-auto" style="width: 200px;">
-                <a href="https://www.linkedin.com/in/bassem-jallouli-6869031b/" class="fa fa-linkedin-in">Linkedin</a>
-                <a href="https://github.com/Bassempro1" class="fa fa-linkedin-in">Github</a>
-            </div>
-            
+            <a class="btn btn btn-outline-info btn-lg fa fa-linkedin-square" href="https://www.linkedin.com/in/bassem-jallouli-6869031b/" role="button"> Linkedin</a>
+            <a class="btn btn btn-outline-info btn-lg fa fa-github" href="https://github.com/Bassempro1" role="button"> Github</a>
         </p>
-        
+
     </div>
 
     <div class="card-deck">
@@ -27,6 +22,7 @@
             <div class="card-body">
                 <h5 class="card-title">Data Analyst</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+
             </div>
         </div>
         <div class="card">
