Add styling to Home and Full Stack pages

--- a/DataHappy/Pages/Conferences/Index.cshtml
+++ b/DataHappy/Pages/Conferences/Index.cshtml
@@ -5,7 +5,12 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Conferences</h1>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">Conferences</h1>
+            <p class="lead">I have a great motivation to participate in many conferences to update my skills and create networking. I build this web page using ASP.NET Core with MVC razor pages and Entity Framework (EF) Core. </p>
+        </div>
+    </div>
 
 <p>
     <a asp-page="Create">Create New</a>
