--- a/DataHappy/Pages/Index.cshtml
+++ b/DataHappy/Pages/Index.cshtml
@@ -6,9 +6,9 @@
 
     <div class="jumbotron" style="height:22rem;">
         <h1 class="display-4">Bassem Jallouli</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <p class="lead">Hi, I'm Bassem Jallouli, a software developer who creates content that attracts, engages, and integrate artificial intelligence.</p>
         <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <p class="lead">My passion and focus is machine learning development</p>
         <p class="lead">
             <a class="btn btn btn-outline-info btn-lg fa fa-linkedin-square" href="https://www.linkedin.com/in/bassem-jallouli-6869031b/" role="button"> Linkedin</a>
             <a class="btn btn btn-outline-info btn-lg fa fa-github" href="https://github.com/Bassempro1" role="button"> Github</a>
@@ -21,7 +21,7 @@
             <img src="~/Images/A1.jpeg" style="height:10rem;" class="card-img-top" alt="Data Analyst">
             <div class="card-body">
                 <h5 class="card-title">Data Analyst</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text"> Prepare data, train models, evaluate algorithms and create new predictions.</p>
 
             </div>
         </div>
@@ -29,14 +29,14 @@
             <img src="~/Images/A2.jpeg" style="height:10rem;" class="card-img-top" alt="Software Developer">
             <div class="card-body">
                 <h5 class="card-title">Software Developer</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">Create a full stack web application, using ASP.NET Core, C#, razor pages, Bootstrap and Javascript.  </p>
             </div>
         </div>
         <div class="card">
             <img src="~/Images/A4.jpeg" style="height:10rem;" class="card-img-top" alt="Quality Engineer">
             <div class="card-body">
                 <h5 class="card-title">Quality Engineer</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <p class="card-text">Define and maintain the project quality engineering plan and producing audit plan.</p>
             </div>
         </div>
     </div>    
