--- a/DataHappy/Pages/Interests.cshtml
+++ b/DataHappy/Pages/Interests.cshtml
@@ -4,7 +4,12 @@
     ViewData["Title"] = "Interests";
 }
 
-<h1>Interests</h1>
+<div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">Interests</h1>
+            <p class="lead">I like learning in positive thinking, team work and artificial intelligence. I enjoy hiking and earthing. </p>
+        </div>
+</div>
 
 <div class="card-deck">
     <div class="card">
