--- a/DataHappy/Pages/Review.cshtml
+++ b/DataHappy/Pages/Review.cshtml
@@ -4,9 +4,14 @@
     ViewData["Title"] = "Review";
 }
 
-    <div class="text-center">
-        <h2>Live Review</h2>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">AI Review</h1>
+            <p class="lead">Reviews are important, and the feelings expressed are key. To understand review content, including sentiment, we integrate machine learning model from ML.NET in our ASP.NET Core website. </p>
+        </div>
+    </div>        
 
+    <div class="text-center">
         <p><textarea id="Message" cols="45" placeholder="Type any text like a short review"></textarea></p>
 
         <div class="sentiment">
