--- a/DataHappy/Pages/Index.cshtml
+++ b/DataHappy/Pages/Index.cshtml
@@ -6,14 +6,16 @@
 
     <div class="jumbotron" style="height:22rem;">
         <h1 class="display-4">Bassem Jallouli</h1>
-        <p class="lead">Hi, I'm Bassem Jallouli, a software developer who creates content that attracts, engages, and integrate artificial intelligence.</p>
+        <p class="lead">Software developer who creates content that attracts, engages, and integrate artificial intelligence.</p>
         <hr class="my-4">
-        <p class="lead">My passion and focus is machine learning development</p>
-        <p class="lead">
-            <a class="btn btn btn-outline-info btn-lg fa fa-linkedin-square" href="https://www.linkedin.com/in/bassem-jallouli-6869031b/" role="button"> Linkedin</a>
-            <a class="btn btn btn-outline-info btn-lg fa fa-github" href="https://github.com/Bassempro1" role="button"> Github</a>
-        </p>
+        <p class="lead">My passion and focus is machine learning development.</p>
 
+        <p class="lead">
+
+            <a href="https://www.linkedin.com/in/bassem-jallouli-6869031b/" class="fa fa-linkedin-square fa-lg"> Linkedin</a>
+            <a href="https://github.com/Bassempro1" class="fa fa-github fa-lg"> Github</a>
+        </p>
+        
     </div>
 
     <div class="card-deck">
