--- a/DataHappy/Pages/Shared/_Layout.cshtml
+++ b/DataHappy/Pages/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - DataHappy</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/d7f94e85c3.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
