--- a/DataHappy/Pages/Index.cshtml
+++ b/DataHappy/Pages/Index.cshtml
@@ -9,13 +9,16 @@
         <p class="lead">Software developer who creates content that attracts, engages, and integrate artificial intelligence.</p>
         <hr class="my-4">
         <p class="lead">My passion and focus is machine learning development.</p>
-
-        <p class="lead">
-
-            <a href="https://www.linkedin.com/in/bassem-jallouli-6869031b/" class="fa fa-linkedin-square fa-lg"> Linkedin</a>
-            <a href="https://github.com/Bassempro1" class="fa fa-github fa-lg"> Github</a>
-        </p>
-        
+         
+        <div id='box1'>
+            <div class='item1'>
+                <a href="https://www.linkedin.com/in/bassem-jallouli-6869031b/" class="fa fa-linkedin-square fa-lg"> Linkedin </a>
+            </div>
+            <div class='item1'>
+                <a href="https://github.com/Bassempro1" class="fa fa-github fa-lg"> Github</a>
+            </div>
+        </div>
+       
     </div>
 
     <div class="card-deck">
