--- a/DataHappy/wwwroot/css/site.css
+++ b/DataHappy/wwwroot/css/site.css
@@ -116,3 +116,15 @@ body {
                 color: gray;
             }
 
+#box1 {
+    display: flex;
+    width: 250px;
+    margin: 0 -5px;
+}
+
+.item1 {
+    background: none;
+    width: 150px;
+    height: 50px;
+    margin: 0 5px;
+}
